feat: Update contact form to use Pageclip for form submissions and add Pageclip script

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Contact - Adetunji Fasiku</title>
     <meta name="description" content="Get in touch with Adetunji Fasiku for data science collaboration, consulting, or career opportunities.">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
     <script>
         const theme = localStorage.getItem("theme") || "light";
         document.documentElement.setAttribute("data-theme", theme);
@@ -455,7 +456,7 @@
             <!-- Contact Form -->
             <div class="contact-form">
                 <h2 style="color: var(--primary-purple); margin-bottom: 1.5rem; text-align: center;">Send Me a Message</h2>
-                <form id="contactForm" data-netlify="true">
+                <form action="https://send.pageclip.co/OJo6N571IhUJUNgY5vD22xvhHzG9wlLj" class="pageclip-form" method="post">
                     <div class="form-group">
                         <label for="name">Your Name *</label>
                         <input type="text" id="name" name="name" required>
@@ -854,5 +855,6 @@ Sent from Adetunji Fasiku's Portfolio Contact Form`;
             }
         });
     </script>
+    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </body>
 </html>
