feat: Update contact form to use POST method for improved data handling

--- a/contact.html
+++ b/contact.html
@@ -455,7 +455,7 @@
             <!-- Contact Form -->
             <div class="contact-form">
                 <h2 style="color: var(--primary-purple); margin-bottom: 1.5rem; text-align: center;">Send Me a Message</h2>
-                <form id="contactForm" data-netlify="true">
+                <form id="contactForm" method="POST" data-netlify="true">
                     <div class="form-group">
                         <label for="name">Your Name *</label>
                         <input type="text" id="name" name="name" required>
