--- a/contact.html
+++ b/contact.html
@@ -455,7 +455,12 @@
             <!-- Contact Form -->
             <div class="contact-form">
                 <h2 style="color: var(--primary-purple); margin-bottom: 1.5rem; text-align: center;">Send Me a Message</h2>
-                <form id="contactForm" method="POST" data-netlify="true">
+                <input type="hidden" name="bot-field">
+
+                <form id="contactForm" name="contact-form" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+
+                    <input type="hidden" name="contact-form" value="contact">
+
                     <div class="form-group">
                         <label for="name">Your Name *</label>
                         <input type="text" id="name" name="name" required>
