--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Adetunji Fasiku</title>
-    <meta name="description" content="Get in touch with Adetunji Fasiku for data science collaboration, consulting, or career opportunities.">
+    <title>Contact - Adetunji Fasiku | Data Analyst | 50M+ Data Points | 95% Model Accuracy</title>
+    <meta name="description" content="Connect with Adetunji Fasiku - Data Analyst with proven track record: 50M+ data points processed, 95% model accuracy, team leadership experience. Available for data analyst, business analyst, and data scientist opportunities.">
     <link rel="stylesheet" href="styles.css">
     <script>
         const theme = localStorage.getItem("theme") || "light";
@@ -407,19 +407,19 @@
     <div class="container">
         <!-- Navigation Menu -->
         <nav class="nav-menu" role="navigation" aria-label="Main navigation">
-            <a href="/" class="nav-item">Home</a>
-            <a href="/projects" class="nav-item">Projects</a>
-            <a href="/resume" class="nav-item">Resume</a>
-            <a href="/contact" class="nav-item active" aria-current="page">Contact</a>
+            <a href="index.html" class="nav-item">Home</a>
+            <a href="projects.html" class="nav-item">Projects</a>
+            <a href="resume.html" class="nav-item">Resume</a>
+            <a href="contact.html" class="nav-item active" aria-current="page">Contact</a>
         </nav>
 
         <main id="main-content">
             <div class="contact-container fade-in">
             <!-- Contact Hero -->
             <div class="contact-hero">
-                <h1>Let's Connect</h1>
-                <p class="subtitle">Data Analyst with expertise in risk modeling, ML explainability, and statistical analysis</p>
-                <p>Always interested in discussing data science opportunities, collaborations, and new projects</p>
+                <h1>Let's Talk Data</h1>
+                <p class="subtitle">Data Analyst | 50M+ Data Points | 95% Model Accuracy | Team Leader</p>
+                <p>Open to data analyst, business analyst, and data scientist opportunities. Also happy to discuss interesting projects or collaborate on data problems.</p>
             </div>
 
             <!-- Contact Methods -->
@@ -429,7 +429,7 @@
                         <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                     </svg>
                     <div class="contact-title">Email</div>
-                    <div class="contact-info">Quick response within 24 hours</div>
+                    <div class="contact-info">Usually respond within 24 hours</div>
                     <a href="mailto:tunchiiefashh@gmail.com" class="contact-link">Send Email</a>
                 </div>
 
@@ -438,7 +438,7 @@
                         <path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/>
                     </svg>
                     <div class="contact-title">GitHub</div>
-                    <div class="contact-info">View my code and projects</div>
+                    <div class="contact-info">See what I'm building</div>
                     <a href="https://github.com/Tunchiie" target="_blank" class="contact-link">Follow</a>
                 </div>
 
@@ -447,14 +447,14 @@
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                     </svg>
                     <div class="contact-title">LinkedIn</div>
-                    <div class="contact-info">Professional networking</div>
+                    <div class="contact-info">Let's connect professionally</div>
                     <a href="https://www.linkedin.com/in/adetunji-fasiku/" target="_blank" class="contact-link">Connect</a>
                 </div>
             </div>
 
             <!-- Contact Form -->
             <div class="contact-form">
-                <h2 style="color: var(--primary-purple); margin-bottom: 1.5rem; text-align: center;">Send Me a Message</h2>
+                <h2 style="color: var(--primary-purple); margin-bottom: 1.5rem; text-align: center;">Send a Message</h2>
                 <input type="hidden" name="bot-field">
 
                 <form id="contactForm" name="contact-form" method="POST" data-netlify="true" netlify-honeypot="bot-field">
@@ -495,7 +495,7 @@
                     
                     <div class="form-group">
                         <label for="message">Message *</label>
-                        <textarea id="message" name="message" placeholder="Tell me about your project, opportunity, or just say hello! Please include relevant details like timeline, budget range (for freelance), or specific requirements." required minlength="10" maxlength="500"></textarea>
+                        <textarea id="message" name="message" placeholder="Tell me about your project, opportunity, or say hello. Please include relevant details like timeline, budget range (for freelance), or specific requirements." required minlength="10" maxlength="500"></textarea>
                         <span class="form-error" id="messageError"></span>
                         <div class="character-count">
                             <span id="charCount">0</span>/500 characters
