feat: Implement unified theme management utility and streamline theme handling across pages

--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,7 @@
     <title>Contact - Adetunji Fasiku | Data Analyst | 50M+ Data Points | 95% Model Accuracy</title>
     <meta name="description" content="Connect with Adetunji Fasiku - Data Analyst with proven track record: 50M+ data points processed, 95% model accuracy, team leadership experience. Available for data analyst, business analyst, and data scientist opportunities.">
     <link rel="stylesheet" href="styles.css">
-    <script>
-        const theme = localStorage.getItem("theme") || "light";
-        document.documentElement.setAttribute("data-theme", theme);
-        // Apply the theme class to both html and body for styles.css compatibility
-        if (theme === "dark") {
-            document.documentElement.classList.add("dark-theme");
-            document.addEventListener('DOMContentLoaded', function() {
-                document.body.classList.add("dark-theme");
-            });
-        }
-    </script>
+    <script src="theme-utils.js"></script>
 
     <script src="enhanced_portfolio.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
