--- a/resume.html
+++ b/resume.html
@@ -6,17 +6,7 @@
     <title>Resume - Adetunji Fasiku | Data Analyst | 50M+ Data Points | 95% Model Accuracy</title>
     <meta name="description" content="Professional resume of Adetunji Fasiku - Data Analyst with 50M+ data points processed, 95% model accuracy, and proven leadership of 25+ team members. Specializing in Python, SQL (5+ platforms), machine learning, and statistical analysis.">
     <link rel="stylesheet" href="styles.css">
-    <script>
-        const theme = localStorage.getItem("theme") || "light";
-        document.documentElement.setAttribute("data-theme", theme);
-        // Apply the theme class to both html and body for styles.css compatibility
-        if (theme === "dark") {
-            document.documentElement.classList.add("dark-theme");
-            document.addEventListener('DOMContentLoaded', function() {
-                document.body.classList.add("dark-theme");
-            });
-        }
-    </script>
+    <script src="theme-utils.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
