--- a/projects/bungaku.html
+++ b/projects/bungaku.html
@@ -6,14 +6,7 @@
     <title>Bungaku - Billboard Music Analysis | Adetunji Fasiku</title>
     <meta name="description" content="Statistical analysis of 130K+ Billboard tracks using ANOVA, Tukey HSD, and t-tests. Discover seasonal patterns and decade-based shifts in music trends with 95% accuracy.">
     <link rel="stylesheet" href="../styles.css">
-    <script>
-        const theme = localStorage.getItem("theme") || "light";
-        document.documentElement.setAttribute("data-theme", theme);
-        if (theme === "dark") {
-            document.documentElement.classList.add("dark-theme");
-            document.body.classList.add("dark-theme");
-        }
-    </script>
+    <script src="../theme-utils.js"></script>
 </head>
 <body>
     <!-- Skip Link for Accessibility -->
@@ -41,7 +34,7 @@
     <main id="main-content">
         <!-- Project Header -->
         <header class="fade-in">
-            <div class="project-icon">🎵</div>
+            <div class="project-icon">文学</div>
             <h1>Bungaku</h1>
             <p class="subtitle">Billboard Music Analysis Platform - Active Development</p>
             <p>Statistical analysis of 130K+ Billboard tracks using ANOVA, Tukey HSD, and t-tests to discover seasonal patterns and decade-based shifts in music trends. Currently expanding analysis and adding new features.</p>
@@ -169,27 +162,8 @@
     </button>
 
     <script>
-        // Theme toggle and other interactions
+        // Page interactions
         document.addEventListener('DOMContentLoaded', () => {
-            // Theme toggle functionality
-            const themeToggle = document.getElementById('theme-toggle');
-            if (themeToggle) {
-                themeToggle.addEventListener('click', function() {
-                    const currentTheme = localStorage.getItem('theme') || 'light';
-                    const newTheme = currentTheme === 'light' ? 'dark' : 'light';
-                    
-                    localStorage.setItem('theme', newTheme);
-                    document.documentElement.setAttribute('data-theme', newTheme);
-                    
-                    if (newTheme === 'dark') {
-                        document.documentElement.classList.add('dark-theme');
-                        document.body.classList.add('dark-theme');
-                    } else {
-                        document.documentElement.classList.remove('dark-theme');
-                        document.body.classList.remove('dark-theme');
-                    }
-                });
-            }
 
             // Scroll progress indicator
             const scrollProgress = document.getElementById('scrollProgress');
