--- a/projects/candlethrob.html
+++ b/projects/candlethrob.html
@@ -6,14 +6,7 @@
     <title>CandleThrob - Algorithmic Trading System | Adetunji Fasiku</title>
     <meta name="description" content="Advanced trading system tracking 510+ securities with 24+ years of historical data. Calculates 113+ technical indicators using Oracle database and real-time data feeds.">
     <link rel="stylesheet" href="../styles.css">
-    <script>
-        const theme = localStorage.getItem("theme") || "light";
-        document.documentElement.setAttribute("data-theme", theme);
-        if (theme === "dark") {
-            document.documentElement.classList.add("dark-theme");
-            document.body.classList.add("dark-theme");
-        }
-    </script>
+    <script src="../theme-utils.js"></script>
 </head>
 <body>
     <!-- Skip Link for Accessibility -->
@@ -41,7 +34,7 @@
     <main id="main-content">
         <!-- Project Header -->
         <header class="fade-in">
-            <div class="project-icon">📈</div>
+            <div class="project-icon">CT</div>
             <h1>CandleThrob</h1>
             <p class="subtitle">Advanced Algorithmic Trading System</p>
             <p>Building an algorithmic trading system that tracks 510+ securities with 24+ years of historical data. Calculates 113+ technical indicators and stores everything in Oracle. Uses real math to analyze market patterns and generate trading signals.</p>
@@ -169,27 +162,8 @@
     </button>
 
     <script>
-        // Theme toggle and other interactions
+        // Page interactions
         document.addEventListener('DOMContentLoaded', () => {
-            // Theme toggle functionality
-            const themeToggle = document.getElementById('theme-toggle');
-            if (themeToggle) {
-                themeToggle.addEventListener('click', function() {
-                    const currentTheme = localStorage.getItem('theme') || 'light';
-                    const newTheme = currentTheme === 'light' ? 'dark' : 'light';
-                    
-                    localStorage.setItem('theme', newTheme);
-                    document.documentElement.setAttribute('data-theme', newTheme);
-                    
-                    if (newTheme === 'dark') {
-                        document.documentElement.classList.add('dark-theme');
-                        document.body.classList.add('dark-theme');
-                    } else {
-                        document.documentElement.classList.remove('dark-theme');
-                        document.body.classList.remove('dark-theme');
-                    }
-                });
-            }
 
             // Scroll progress indicator
             const scrollProgress = document.getElementById('scrollProgress');
