feat: Update navigation links to use clean URLs and enhance theme toggle functionality

--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
     <div class="container">
         <!-- Navigation Menu -->
         <nav class="nav-menu" role="navigation" aria-label="Main navigation">
-            <a href="index.html" class="nav-item active" aria-current="page">Home</a>
-            <a href="projects.html" class="nav-item">Projects</a>
-            <a href="resume.html" class="nav-item">Resume</a>
-            <a href="contact.html" class="nav-item">Contact</a>
+            <a href="/" class="nav-item active" aria-current="page">Home</a>
+            <a href="/projects" class="nav-item">Projects</a>
+            <a href="/resume" class="nav-item">Resume</a>
+            <a href="/contact" class="nav-item">Contact</a>
             <!-- Hidden admin link - only visible when you know to look for it -->
-            <a href="resume-generator.html" class="nav-item" style="display: none;" id="admin-link">Adapter</a>
+            <a href="/resume-generator" class="nav-item" style="display: none;" id="admin-link">Adapter</a>
         </nav>
 
         <main id="main-content">
@@ -711,9 +711,8 @@
     </div>
 
     <!-- Theme Toggle Button -->
-    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light theme">
-        <span class="theme-toggle-sun">☀️</span>
-        <span class="theme-toggle-moon">🌙</span>
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
+        <span class="theme-icon">🌙</span>
     </button>
 
     <!-- Back to Top Button -->
