--- a/projects.html
+++ b/projects.html
@@ -18,15 +18,15 @@
     <!-- Navigation -->
     <nav class="nav-container">
         <div class="nav-content">
-            <a href="index.html" class="nav-logo">
+            <a href="/" class="nav-logo">
                 <span class="logo-text">AF</span>
             </a>
-            
+
             <div class="nav-menu">
-                <a href="index.html" class="nav-item">Home</a>
-                <a href="projects.html" class="nav-item active" aria-current="page">Projects</a>
-                <a href="resume.html" class="nav-item">Resume</a>
-                <a href="contact.html" class="nav-item">Contact</a>
+                <a href="/" class="nav-item">Home</a>
+                <a href="/projects" class="nav-item active" aria-current="page">Projects</a>
+                <a href="/resume" class="nav-item">Resume</a>
+                <a href="/contact" class="nav-item">Contact</a>
             </div>
         </div>
     </nav>
@@ -87,7 +87,7 @@
             <div class="projects-grid">
                 
                 <!-- Bungaku Project Card -->
-                <div class="project-card" data-categories="data-science,data-analysis" data-href="projects/bungaku.html">
+                <div class="project-card" data-categories="data-science,data-analysis" data-href="/projects/bungaku">
                     <div class="project-header">
                         <div class="project-icon">文学</div>
                         <div class="project-status status-active">Active</div>
@@ -109,7 +109,7 @@
                 </div>
 
                 <!-- CandleThrob Project Card -->
-                <div class="project-card" data-categories="trading,data-science" data-href="projects/candlethrob.html">
+                <div class="project-card" data-categories="trading,data-science" data-href="/projects/candlethrob">
                     <div class="project-header">
                         <div class="project-icon">CT</div>
                         <div class="project-status status-active">Active</div>
@@ -131,7 +131,7 @@
                 </div>
 
                 <!-- Customer Purchase Predictor Card -->
-                <div class="project-card" data-categories="machine-learning,data-science" data-href="projects/customer-predictor.html">
+                <div class="project-card" data-categories="machine-learning,data-science" data-href="/projects/customer-predictor">
                     <div class="project-header">
                         <div class="project-icon">CPP</div>
                         <div class="project-status status-completed">Completed</div>
@@ -153,7 +153,7 @@
                 </div>
 
                 <!-- Lending Club Risk Model Card -->
-                <div class="project-card" data-categories="machine-learning,data-science" data-href="projects/lending-club.html">
+                <div class="project-card" data-categories="machine-learning,data-science" data-href="/projects/lending-club">
                     <div class="project-header">
                         <div class="project-icon">LC</div>
                         <div class="project-status status-completed">Completed</div>
@@ -171,6 +171,28 @@
                         <span class="metric">2.2M+ loans</span>
                         <span class="metric">77% accuracy</span>
                         <span class="metric">0.76 F1-score</span>
+                    </div>
+                </div>
+
+                <!-- Breast Cancer Classifier Card -->
+                <div class="project-card" data-categories="machine-learning,data-science" data-href="/projects/breast-cancer">
+                    <div class="project-header">
+                        <div class="project-icon">BCC</div>
+                        <div class="project-status status-completed">Completed</div>
+                    </div>
+                    <h3>Breast Cancer Classifier</h3>
+                    <p class="project-subtitle">From-Scratch ML Implementation</p>
+                    <p class="project-description">Coded logistic regression from scratch achieving 95% test accuracy. Implemented without ML libraries to demonstrate deep understanding of mathematical foundations and algorithm mechanics.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Python</span>
+                        <span class="tech-tag">NumPy</span>
+                        <span class="tech-tag">From Scratch</span>
+                        <span class="tech-tag">Mathematical Foundations</span>
+                    </div>
+                    <div class="project-metrics">
+                        <span class="metric">95% accuracy</span>
+                        <span class="metric">No ML libraries</span>
+                        <span class="metric">Pure math</span>
                     </div>
                 </div>
 
