--- a/projects/bungaku.html
+++ b/projects/bungaku.html
@@ -18,15 +18,15 @@
     <!-- Navigation -->
     <nav class="nav-container">
         <div class="nav-content">
-            <a href="../index.html" class="nav-logo">
+            <a href="/" class="nav-logo">
                 <span class="logo-text">AF</span>
             </a>
-            
+
             <div class="nav-menu">
-                <a href="../index.html" class="nav-item">Home</a>
-                <a href="../projects.html" class="nav-item">Projects</a>
-                <a href="../resume.html" class="nav-item">Resume</a>
-                <a href="../contact.html" class="nav-item">Contact</a>
+                <a href="/" class="nav-item">Home</a>
+                <a href="/projects" class="nav-item">Projects</a>
+                <a href="/resume" class="nav-item">Resume</a>
+                <a href="/contact" class="nav-item">Contact</a>
             </div>
         </div>
     </nav>
@@ -56,7 +56,7 @@
                 <h4>Technical Achievements & Business Impact</h4>
                 <ul class="highlight-list">
                     <li>Analyzed 130K+ Billboard tracks spanning multiple decades to identify seasonal music trends and decade-based shifts</li>
-                    <li>Implemented 13 statistical tests including ANOVA, Tukey HSD, and t-tests for robust pattern validation</li>
+                    <li>Implemented 4 statistical tests including ANOVA, Tukey HSD, and t-tests for robust pattern validation</li>
                     <li>Achieved 95% accuracy in predicting seasonal music preferences using statistical modeling</li>
                     <li>Discovered significant correlations between song characteristics and chart performance across different time periods</li>
                     <li>Built comprehensive data pipeline for processing and analyzing large-scale music industry datasets</li>
@@ -145,7 +145,7 @@
         <!-- Back to Projects -->
         <section class="section fade-in">
             <div style="text-align: center;">
-                <a href="../projects.html" class="project-link">← Back to Projects</a>
+                <a href="/projects" class="project-link">← Back to Projects</a>
             </div>
         </section>
 
