--- a/projects/lending-club.html
+++ b/projects/lending-club.html
@@ -18,15 +18,15 @@
     <!-- Navigation -->
     <nav class="nav-container">
         <div class="nav-content">
-            <a href="../index.html" class="nav-logo">
+            <a href="/" class="nav-logo">
                 <span class="logo-text">AF</span>
             </a>
-            
+
             <div class="nav-menu">
-                <a href="../index.html" class="nav-item">Home</a>
-                <a href="../projects.html" class="nav-item">Projects</a>
-                <a href="../resume.html" class="nav-item">Resume</a>
-                <a href="../contact.html" class="nav-item">Contact</a>
+                <a href="/" class="nav-item">Home</a>
+                <a href="/projects" class="nav-item">Projects</a>
+                <a href="/resume" class="nav-item">Resume</a>
+                <a href="/contact" class="nav-item">Contact</a>
             </div>
         </div>
     </nav>
