--- a/index.html
+++ b/index.html
@@ -106,16 +106,25 @@
     <!-- Scroll Progress Indicator -->
     <div class="scroll-progress" id="scrollProgress"></div>
     
+    <!-- Navigation -->
+    <nav class="nav-container">
+        <div class="nav-content">
+            <a href="/" class="nav-logo">
+                <span class="logo-text">AF</span>
+            </a>
+
+            <div class="nav-menu" role="navigation" aria-label="Main navigation">
+                <a href="/" class="nav-item active" aria-current="page">Home</a>
+                <a href="/projects" class="nav-item">Projects</a>
+                <a href="/resume" class="nav-item">Resume</a>
+                <a href="/contact" class="nav-item">Contact</a>
+                <!-- Hidden admin link - only visible when you know to look for it -->
+                <a href="/resume-generator" class="nav-item" style="display: none;" id="admin-link">Adapter</a>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
-        <!-- Navigation Menu -->
-        <nav class="nav-menu" role="navigation" aria-label="Main navigation">
-            <a href="/" class="nav-item active" aria-current="page">Home</a>
-            <a href="/projects" class="nav-item">Projects</a>
-            <a href="/resume" class="nav-item">Resume</a>
-            <a href="/contact" class="nav-item">Contact</a>
-            <!-- Hidden admin link - only visible when you know to look for it -->
-            <a href="/resume-generator" class="nav-item" style="display: none;" id="admin-link">Adapter</a>
-        </nav>
 
         <main id="main-content">
         <!-- Header Section -->
