--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,9 @@
     <!-- Navigation -->
     <nav class="nav-container">
         <div class="nav-content">
+            <a href="/" class="nav-logo">
+                <span class="logo-text">AF</span>
+            </a>
 
             <div class="nav-menu">
                 <a href="/" class="nav-item">Home</a>
