--- a/resume.html
+++ b/resume.html
@@ -175,14 +175,23 @@
     <!-- Scroll Progress Indicator -->
     <div class="scroll-progress" id="scrollProgress"></div>
     
+    <!-- Navigation -->
+    <nav class="nav-container">
+        <div class="nav-content">
+            <a href="/" class="nav-logo">
+                <span class="logo-text">AF</span>
+            </a>
+
+            <div class="nav-menu" role="navigation" aria-label="Main navigation">
+                <a href="/" class="nav-item">Home</a>
+                <a href="/projects" class="nav-item">Projects</a>
+                <a href="/resume" class="nav-item active" aria-current="page">Resume</a>
+                <a href="/contact" class="nav-item">Contact</a>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
-        <!-- Navigation Menu -->
-        <nav class="nav-menu" role="navigation" aria-label="Main navigation">
-            <a href="/" class="nav-item">Home</a>
-            <a href="/projects" class="nav-item">Projects</a>
-            <a href="/resume" class="nav-item active" aria-current="page">Resume</a>
-            <a href="/contact" class="nav-item">Contact</a>
-        </nav>
 
         <main id="main-content">
             <div class="resume-container fade-in">
