--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                     <div class="metrics-grid">
                         <div class="metric-card">
                             <span class="metric-number">130K+</span>
-                            <span class="metric-label">Billboard Tracks Analyzed</span>
+                            <span class="metric-label">Billboard entries Analyzed</span>
                         </div>
                         <div class="metric-card">
                             <span class="metric-number">24+</span>
@@ -633,7 +633,7 @@
                 
                 <div class="project-card">
                     <h3>Bungaku: Hit Song Pattern Analyzer</h3>
-                    <p>Analyzed 130K+ Billboard tracks with statistical tests (ANOVA, Tukey HSD) to discover seasonal and decade-based audio feature patterns. Built visualizations for music industry insights.</p>
+                    <p>Analyzed 130K+ Billboard entries with statistical tests (ANOVA, Tukey HSD) to discover seasonal and decade-based audio feature patterns. Built visualizations for music industry insights.</p>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">ANOVA</span>
@@ -664,7 +664,7 @@
                 <p><strong>Correlation One</strong> | <span class="experience-date">Expected: January 2025 - July 2025</span></p>
                 <p>• Built SQL queries, Python models, and Tableau/Looker dashboards for supply chain, HR, and finance domains<br>
                 • Used statistical testing and visual storytelling to deliver actionable insights in capstone projects<br>
-                • Final project (Bungaku): identified audio traits in hit songs using statistical analysis of 130K+ tracks</p>
+                • Final project (Bungaku): identified audio traits in hit songs using statistical analysis of 130K+ entries</p>
             </div>
             
             <div class="experience-item">
